--- a/grid.css
+++ b/grid.css
@@ -5,21 +5,21 @@ body {
   grid-template-rows: 40px auto 40px;
   grid-gap: 3px;
   grid-template-areas:
-       "m h h h h h h h h h h h"
-       "m c c c c c c c c c c c"
-       "m f f f f f f f f f f f";
+       "c c c c c c c c c c c m"
+       "c c c c c c c c c c c m"
+       "f f f f f f f f f f f m";
 }
 
 .header {
-  grid-area: h;
-  background: #eaeaea;
+  font-family: 'Poppins', 'Helvetica', sans-serif;
+  grid-area: c;
+  z-index: 100;
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .main {
   grid-area: c;
+  height: 75vh;
   background-image: url("img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -38,7 +38,7 @@ body {
 
 @media (max-width: 700px) {
 
-  main,
+
   aside {
     grid-column: 1 / span 5;
   }
@@ -61,5 +61,5 @@ footer {
 }
 
 footer {
-  height: 5vw;
+  height: 2vw;
 }
