add button and form styling

--- a/grid.css
+++ b/grid.css
@@ -11,6 +11,9 @@ body {
 }
 
 .header {
+  margin: 5% 0 0 5%;
+  color: yellow;
+  font-size: 2vw;
   font-family: 'Poppins', 'Helvetica', sans-serif;
   grid-area: c;
   z-index: 100;
@@ -30,10 +33,28 @@ body {
 
 .form {
   grid-area: m;
+  background-color: #A2E4F2;
+  padding: 10px;
+}
+
+.form-label {
+  line-height: 1.4vw;
+  font-size: .8rem;
 }
 
 .footer {
     grid-area: f;
+    font-weight: bold;
+    background-color: #F0E799;
+}
+
+#button {
+  margin-top: 10px;
+  background-color: #109AF5;
+  color: white;
+  border-style: none;
+  padding: 5px;
+  font-family: 'Poppins', 'Helvetica', sans-serif;
 }
 
 @media (max-width: 700px) {
@@ -47,6 +68,7 @@ body {
 
 /* Demo Specific Styles */
 body {
+  font-family: 'Raleway', sans-serif;
   margin: 0 auto;
   max-width: 56em;
   padding: 1em 0;
@@ -54,7 +76,6 @@ body {
 
 aside,
 footer {
-  background: #eaeaea;
   display: flex;
   align-items: center;
   justify-content: center;
