--- a/grid.css
+++ b/grid.css
@@ -7,7 +7,7 @@ body {
   grid-template-areas:
        "h h h h h h h h h h h h"
        "c c c c c c c c c c c m"
-       "f f f f f f f f f f f m";
+       "f f f f f f f f f f f f";
 }
 
 .header {
@@ -22,6 +22,8 @@ body {
 }
 
 .main-title {
+  position: absolute;
+  left: 20vw;
   grid-area: c;
   color: yellow;
   font-size: 2vw;
@@ -29,26 +31,27 @@ body {
   z-index: 100;
 }
 
-.main {
-  grid-area: c;
-  height: 75vh;
-  background-image: url("img/background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .p-main {
   position: relative;
   padding: 20px;
-  line-height: 1.4vw;
+  line-height: 2vw;
   font-weight: bold;
   color: white;
   margin: 5% 0 0 5%;
 }
 
+.main {
+  grid-area: c;
+  height: 75vh;
+  width: 97vh;
+  background-image: url("img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .form {
   grid-area: m;
-  background-color: #A2E4F2;
+  background-color: rgba(164, 207, 190, .8);
   padding: 10px;
 }
 
