added logo and form text

--- a/grid.css
+++ b/grid.css
@@ -1,7 +1,7 @@
 body {
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 4fr;
   grid-template-rows: 40px auto 40px;
   grid-gap: 3px;
   grid-template-areas:
@@ -17,15 +17,21 @@ body {
 }
 
 .logo {
-  font-weight: bold;
-  padding: 10px;
+  background-size: 10px;
+}
+
+.main-text {
+  grid-area: c;
+  width: 90%;
 }
 
 .main-title {
   position: absolute;
-  left: 20vw;
+  left: 28vw;
+  top: 4.5vw;
   grid-area: c;
   color: yellow;
+  text-shadow: 2px 2px 2px black;
   font-size: 2vw;
   font-family: 'Poppins', 'Helvetica', sans-serif;
   z-index: 100;
@@ -33,8 +39,10 @@ body {
 
 .p-main {
   position: relative;
-  padding: 20px;
-  line-height: 2vw;
+  width: 60%;
+  padding-top: 4.5vw;
+  padding-bottom: 1vw;
+  line-height: 1.6vw;
   font-weight: bold;
   color: white;
   margin: 5% 0 0 5%;
@@ -46,12 +54,21 @@ body {
   width: 97vh;
   background-image: url("img/background.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 180%;
 }
 
+
 .form {
+  position: relative;
   grid-area: m;
+  padding: 20px;
   background-color: rgba(164, 207, 190, .8);
+}
+.form-text {
+  font-weight: bold;
+  line-height: 1.6vw;
+  position: absolute;
+  margin-top: -12vw;
   padding: 10px;
 }
 
@@ -68,9 +85,11 @@ body {
 
 #button {
   margin-top: 10px;
-  background-color: #109AF5;
-  color: white;
+  background-color: yellow;
+  color: #04756F;
+  width: 100%;
   border-style: none;
+  box-shadow:  2px 2px 2px slategrey;
   padding: 5px;
   font-family: 'Poppins', 'Helvetica', sans-serif;
 }
